[gd_scene load_steps=6 format=3 uid="uid://ltlb140aqur4"]

[ext_resource type="Script" uid="uid://dymptdgqn1fcx" path="res://menus/script/menu_juegos.gd" id="1_2rpal"]
[ext_resource type="Texture2D" uid="uid://cywjverrs8hg2" path="res://assets/images/foto_Ruleta.jpeg" id="1_7oyay"]
[ext_resource type="Texture2D" uid="uid://blsidblnkdhvh" path="res://icon.svg" id="1_fgk0e"]
[ext_resource type="Texture2D" uid="uid://dgoyetg0hp144" path="res://assets/images/foto_BlackJack.jpeg" id="2_sluh0"]
[ext_resource type="Texture2D" uid="uid://762bn44r4hkt" path="res://assets/images/foto_Tragaperras.jpeg" id="4_sluh0"]

[node name="MenuJuegos" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2rpal")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.190762, 0.190762, 0.190762, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -572.5
offset_top = -254.5
offset_right = 572.5
offset_bottom = 254.5
grow_horizontal = 2
grow_vertical = 2

[node name="Ruleta" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_icons/icon = ExtResource("1_7oyay")
icon = ExtResource("1_7oyay")

[node name="BlackJack" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_icons/icon = ExtResource("2_sluh0")

[node name="Tragaperras" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_icons/icon = ExtResource("1_fgk0e")
icon = ExtResource("4_sluh0")

[connection signal="pressed" from="VBoxContainer/Ruleta" to="." method="_on_ruleta_pressed"]
[connection signal="pressed" from="VBoxContainer/BlackJack" to="." method="_on_black_jack_pressed"]
[connection signal="pressed" from="VBoxContainer/Tragaperras" to="." method="_on_tragaperras_pressed"]
